# slack-irc-rs

./: .gitignore  Cargo.toml  settings.toml
src/: datastore.rs  gateway.rs  hub.rs  irc.rs  irc_gateway.rs  irc_server.rs  lib.rs  slack_gateway.rs
