[package]
name = "slack_irc"
version = "0.1.0"
authors = ["isra17 <isra017@gmail.com>"]

[dependencies]
irc = { git = "https://github.com/isra17/irc", branch = "develop" }
slack = "0.19.0"
slack_api = "0.19.0"
tokio = "0.1"
tokio-io = "0.1"
futures-await = "0.1"
failure = "0.1"
config = "0.8"
rusqlite = "0.13.0"
bcrypt = "0.1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
